--- a/Week1/Day1/testgit.html
+++ b/Week1/Day1/testgit.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>testpush Github</title>
+    <title>About Me</title>
 </head>
 <body>
-    <h1>Github</h1>
+    <h1>About Me</h1>
+
+    <h2>Personal Information</h2>
+    <p><strong>Name:</strong> <em>John Doe</em></p>
+    <p><strong>Age:</strong> <em>25</em></p>
+    <p><strong>Birthdate:</strong> <em>January 15, 2000</em></p>
+
+    <h2>Why I Decided to Learn to Code</h2>
+    <p>
+        I decided to learn to code because I have always been fascinated by how technology works. 
+        The idea of <strong>building something from scratch</strong> that can help people or solve real-world problems really excites me. 
+        I believe that <em>coding opens doors</em> to endless opportunities, and I want to be a part of that future.
+    </p>
 </body>
 </html>
