updated info abou me

--- a/Week1/Day1/testgit.html
+++ b/Week1/Day1/testgit.html
@@ -9,9 +9,9 @@
     <h1>About Me</h1>
 
     <h2>Personal Information</h2>
-    <p><strong>Name:</strong> <em>John Doe</em></p>
-    <p><strong>Age:</strong> <em>25</em></p>
-    <p><strong>Birthdate:</strong> <em>January 15, 2000</em></p>
+    <p><strong>Name:</strong> <em>Yash Radeecanah</em></p>
+    <p><strong>Age:</strong> <em>22</em></p>
+    <p><strong>Birthdate:</strong> <em>December 23, 2002</em></p>
 
     <h2>Why I Decided to Learn to Code</h2>
     <p>
