--- a/Week1/Day1/testgit.html
+++ b/Week1/Day1/testgit.html
@@ -15,9 +15,54 @@
 
     <h2>Why I Decided to Learn to Code</h2>
     <p>
-        I decided to learn to code because I have always been fascinated by how technology works. 
-        The idea of <strong>building something from scratch</strong> that can help people or solve real-world problems really excites me. 
+        I decided to learn to code because I have always been fascinated by how technology works. <br> 
+        The idea of <strong>building something from scratch</strong> that can help people or solve real-world problems really excites me. <br>
         I believe that <em>coding opens doors</em> to endless opportunities, and I want to be a part of that future.
     </p>
+    <h2>My Hobbies</h2>
+    <ul>
+        <li>Race</li>
+        <li>fishing </li>
+        <li>slalom</li>
+    </ul>
+
+    <h2>My Favorite Food</h2>
+    <ul>
+        <li>Pizza</li>
+        <li>Biryani</li>
+        <li>chicken curry</li>
+    </ul>
+    <h2>Connect with Me</h2>
+        <a href="https://www.facebook.com/yourusername" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6c/Facebook_Logo_2023.png/1024px-Facebook_Logo_2023.png" alt="inst facebook" width="50" height="50"></a>
+        <a href="https://www.instagram.com/yourusername" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/960px-Instagram_icon.png" alt="inst logo" width="50" height="50"></a>
+
+        <h2>My Projects, Skills, and Hobbies</h2>
+<table>
+    <tr>
+        <th>Projects I Want to Create</th>
+        <th>My Best Skills</th>
+        <th>My Hobbies</th>
+    </tr>
+    <tr>
+        <td>Online Car Booking System</td>
+        <td>Team working</td>
+        <td>Race</td>
+    </tr>
+    <tr>
+        <td>Weather Forecast App</td>
+        <td>Communication</td>
+        <td>Fishing</td>
+    </tr>
+    <tr>
+        <td>Food Delivery Website</td>
+        <td>Quick Learning</td>
+        <td>Slalom</td>
+    </tr>
+</table>
+<h2>Quote That Represents Me</h2>
+<blockquote>
+    "The future belongs to those who believe in the beauty of their dreams."  
+    <br>— Eleanor Roosevelt
+</blockquote>
 </body>
 </html>
