--- a/Week1/Day3/Cat-website/catwebsite.html
+++ b/Week1/Day3/Cat-website/catwebsite.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
     <h1>The domestic cat
 </h1> <hr>
-<p>Click here for more information about <a href="http://"></a> </p>
+<p>Click here for more information about <a href="url">the lion</a></p>
 <h2>About domestic cats </h2>
-<p>They are often called house cats when kept as indoor pets or simply cats when there is no need to distinguish them from other felids and felines. They are often valued by humans for companionship. <br>
-There are more than seventy cat breeds recognized by various cat registries..</p>
+<p>They are often called house cats when kept as indoor pets or simply cats when there is no need to distinguish them from other felids and felines. They are often valued by humans for companionship. </p> <br>
+<p>There are more than seventy cat breeds recognized by various cat registries..</p>
 
-<h3>Cat senses</h3>
+<h3 class="catsense">Cat senses</h3>
 <ul>
 <li>They can hear sounds too faint or too high in frequency for human ears </li>
 <li>They can see in near darkness </li>
@@ -31,15 +32,16 @@ There are more than seventy cat breeds recognized by various cat registries..</p
     
 </ol>
 
-<h3>Media</h3>
-<img src="" alt="" srcset="">
-
+<h3 class="mediatxt">Media</h3>
+<div class="catimage">
+    <img src="cat.jpeg" alt="cat image" width="600" height="400" >
+</div>
 <h2>The lions</h2> <hr>
 
 <p>Present in Africa and India, the lion typically inhabits grasslands and savannahs, but is absent in dense forests. It is usually more diurnal than other big cats, but when persecuted adapts to being active at night and at twilight. A lion pride consists of a few adult males, related females and cubs. Prides vary in size and composition from three to 20 adult lions, depending on habitat and prey availability. Females cooperate when hunting and prey mostly on large ungulates, including antelope, deer, buffalo, zebra and even giraffe <br>
 The difference between Characteristics and Behavior</p>
 
-<p>The difference between Characteristics and Behavior</p>
+<span class="Characteristics"><p>The difference between Characteristics and Behavior</p></span>
 
 <table>
     <tr>
@@ -53,7 +55,7 @@ The difference between Characteristics and Behavior</p>
     
 </table>
 
-<img src="" alt="" srcset="">
+<img src="lion.jpeg" alt="lion image"  width="600" height="400">
 
 
 </body>
