--- a/Week1/Day3/Cat-website/catwebsite.html
+++ b/Week1/Day3/Cat-website/catwebsite.html
@@ -41,7 +41,7 @@
 <p>Present in Africa and India, the lion typically inhabits grasslands and savannahs, but is absent in dense forests. It is usually more diurnal than other big cats, but when persecuted adapts to being active at night and at twilight. A lion pride consists of a few adult males, related females and cubs. Prides vary in size and composition from three to 20 adult lions, depending on habitat and prey availability. Females cooperate when hunting and prey mostly on large ungulates, including antelope, deer, buffalo, zebra and even giraffe <br>
 The difference between Characteristics and Behavior</p>
 
-<span class="Characteristics"><p>The difference between Characteristics and Behavior</p></span>
+<div class="Characteristics"><p>The difference between Characteristics and Behavior</p></div>
 
 <table>
     <tr>
@@ -54,9 +54,8 @@ The difference between Characteristics and Behavior</p>
 </td>
     
 </table>
-
+<div class="lionimage">
 <img src="lion.jpeg" alt="lion image"  width="600" height="400">
-
-
+</div>
 </body>
 </html>
