--- a/Week1/Day5/Shopping-Website/Shopping-website.html
+++ b/Week1/Day5/Shopping-Website/Shopping-website.html
@@ -21,8 +21,17 @@
       <div class="product1">
          <div class="badge-new"><p class="txt-new">NEW</p></div>
        <div class="badge-dis"><p class="discount-txt">-10%</p></div>
-            <img src="img1.jpeg.jpg" alt="man standing" width="200px" height="250px">
-            <p>men's white shirt</p>
+            <img src="img1.jpeg.jpg" alt="man standing" width="230px" height="280px">
+            <p class="img-p-txt">men's white shirt</p>
+            <p class="pricepromo">Price: $15</p>
+            <p class="price1">$20</p>
+            <button class="button-add" type="button">Add to cart</button>
+         </div>
+         <div class="product0">
+         <div class="badge-new"><p class="txt-new">NEW</p></div>
+       <div class="badge-dis"><p class="discount-txt">-10%</p></div>
+            <img src="man0.jpg" alt="man in white shirt" width="230px" height="280px">
+            <p class="img-p-txt">men's blue shirt</p>
             <p class="pricepromo">Price: $15</p>
             <p class="price1">$20</p>
             <button class="button-add" type="button">Add to cart</button>
@@ -31,8 +40,8 @@
          <div class="product2">
             <div class="badge-new"><p class="txt-new">NEW</p></div>
             <div class="badge-dis"><p class="discount-txt">-20%</p></div>
-            <img src="img2.jpg" alt="man standing" width="200px" height="250px">
-            <p>men's white shirt</p>
+            <img src="img2.jpg" alt="man standing brown jacket" width="230px" height="280px">
+            <p class="img-p-txt">men's brown jacket</p>
             <p class="pricepromo">Price: $16</p>
             <p class="price1"> $22</p>
             <button class="button-add" type="button">Add to cart</button>
@@ -40,8 +49,8 @@
          <div class="product3">
             <div class="badge-new"><p class="txt-new">NEW</p></div>
             <div class="badge-dis"><p class="discount-txt">-15%</p></div>
-            <img src="img3.jpg" alt="man standing" width="200px" height="250px">
-            <p>men's white shirt</p>
+            <img src="img3.jpg" alt="men's yellow shirt" width="230px" height="280px">
+            <p class="img-p-txt">men's yellow shirt</p>
             <p class="pricepromo">Price: $18</p>
             <p class="price1"> $25</p>
             <button class="button-add" type="button">Add to cart</button>
@@ -53,26 +62,34 @@
         <div class="frist-rowpoduct"> 
          <div class="kidpro1">
             <div class="badge-newkid"><p class="txt-newkid">NEW</p></div>
-            <img src="kidimg1.jpg" alt="man standing" width="200px" height="250px">
-            <p>men's white shirt</p>
+            <img src="kidimg1.jpg" alt="kid's white dress" width="230px" height="280px">
+            <p class="img-p-txt">kid's white dress</p>
+            <p class="pricepromo">Price: $16</p>
+            <p class="price1">$18</p>
+            <button class="button-add" type="button">Add to cart</button>
+         </div>
+        <div class="kidpro0">
+            <div class="badge-newkid"><p class="txt-newkid">NEW</p></div>
+            <img src="kid0.jpg" alt="Girl's white shirt" width="230px" height="280px">
+            <p class="img-p-txt">Girl's red shirt</p>
             <p class="pricepromo">Price: $15</p>
             <p class="price1">$20</p>
             <button class="button-add" type="button">Add to cart</button>
          </div>
          <div class="kidpro2">
             <div class="badge-dis"><p class="discount-txt">-10%</p></div>
-            <img src="kidimg2.jpg" alt="man standing" width="200px" height="250px">
-            <p>men's white shirt</p>
-            <p class="pricepromo">Price: $15</p>
-            <p class="price1"> $20</p>
+            <img src="kidimg2.jpg" alt="Boy's brown shirt" width="230px" height="280px">
+            <p class="img-p-txt">Boy's brown shirt</p>
+            <p class="pricepromo">Price: $12</p>
+            <p class="price1"> $19</p>
             <button class="button-add" type="button">Add to cart</button>
          </div>
          <div class="kidpro3">
-            <div class="badge-newkid"><p class="txt-newkid">NEW</p></div>
-            <img src="kidimg3.jpg" alt="man standing" width="200px" height="250px">
-            <p>men's white shirt</p>
-            <p class="pricepromo">Price: $15</p>
-            <p class="price1"> $20</p>
+            <!-- <div class="badge-newkid"><p class="txt-newkid">NEW</p></div> -->
+            <img src="kidimg3.jpg" alt="Boy's white shirt" width="230px" height="280px">
+            <p class="img-p-txt">Boy's white dress</p>
+            <p class="pricepromo">Price: $10</p>
+            <p class="price1"> $17</p>
             <button class="button-add" type="button">Add to cart</button>
          </div>
          </div>
@@ -83,61 +100,37 @@
         <div class="frist-rowpoduct"> 
          <div class="productwoman1">
             <div class="badge-new-woman"><p class="txt-new-woman">NEW</p></div>
-            <img src="woman-img1.jpg" alt="man standing" width="200px" height="250px">
-            <p>men's white shirt</p>
+            <img src="woman-img1.jpg" alt="women white shirt" width="230px" height="280px">
+            <p class="img-p-txt">women white shirt</p>
             <p class="pricepromo">Price: $15</p>
             <p class="price1">$20</p>
             <button class="button-add" type="button">Add to cart</button>
          </div>
+         <div class="productwoman0">
+            <div class="badge-new-woman"><p class="txt-new-woman">NEW</p></div>
+            <img src="WOMAN0.jpg" alt="Pink dress" width="230px" height="280px">
+            <p class="img-p-txt"> Black dress</p>
+            <p class="pricepromo">Price: $25</p>
+            <p class="price1">$28</p>
+            <button class="button-add" type="button">Add to cart</button>
+         </div>
          <div class="productwoman2">
             <div class="badge-dis"><p class="discount-txt">-10%</p></div>
-            <img src="woman-img2.jpg" alt="man standing" width="200px" height="250px">
-            <p>men's white shirt</p>
+            <img src="woman-img2.jpg" alt="Black dress" width="230px" height="280px">
+            <p class="img-p-txt">Woman dress</p>
             <p class="pricepromo">Price: $15</p>
             <p class="price1"> $20</p>
             <button class="button-add" type="button">Add to cart</button>
          </div>
          <div class="productwoman3">
             <div class="badge-new-woman"><p class="txt-new-woman">NEW</p></div>
-            <img src="woman-img3.jpg" alt="man standing" width="200px" height="250px">
-            <p>men's white shirt</p>
-            <p class="pricepromo">Price: $15</p>
-            <p class="price1"> $20</p>
+            <img src="woman-img3.jpg" alt="Red dress" width="230px" height="280px">
+            <p class="img-p-txt"> Red dress</p>
+            <p class="pricepromo">Price: $25</p>
+            <p class="price1"> $30</p>
             <button class="button-add" type="button">Add to cart</button>
          </div>
          </div>
- </section>
- <section>
-   <div >
-    <div><h2>Women's Wear</h2></div>
-        <div class="frist-rowpoduct"> 
-         <div class="productwoman1">
-            <div class="badge-new-woman"><p class="txt-new-woman">NEW</p></div>
-            <img src="woman-img1.jpg" alt="man standing" width="200px" height="250px">
-            <p>men's white shirt</p>
-            <p class="pricepromo">Price: $15</p>
-            <p class="price1">$20</p>
-            <button class="button-add" type="button">Add to cart</button>
-         </div>
-         <div class="productwoman2">
-            <div class="badge-dis"><p class="discount-txt">-10%</p></div>
-            <img src="woman-img2.jpg" alt="man standing" width="200px" height="250px">
-            <p>men's white shirt</p>
-            <p class="pricepromo">Price: $15</p>
-            <p class="price1"> $20</p>
-            <button class="button-add" type="button">Add to cart</button>
-         </div>
-         <div class="productwoman3">
-            <div class="badge-new-woman"><p class="txt-new-woman">NEW</p></div>
-            <img src="woman-img3.jpg" alt="man standing" width="200px" height="250px">
-            <p>men's white shirt</p>
-            <p class="pricepromo">Price: $15</p>
-            <p class="price1"> $20</p>
-            <button class="button-add" type="button">Add to cart</button>
-         </div>
-         </div>
-         </div>
- </section>
     <footer>
         <div class="footer-top">
             <h3>Shopping Website</h3>
