last commit shopping webite

--- a/Week1/Day5/Shopping-Website/Shopping-website.html
+++ b/Week1/Day5/Shopping-Website/Shopping-website.html
@@ -37,8 +37,8 @@
             <button class="button-add" type="button">Add to cart</button>
          </div>
           
-         <div class="product2">
-            <div class="badge-new"><p class="txt-new">NEW</p></div>
+          <div class="product2">
+              <div class="badge-new"><p class="txt-new">NEW</p></div>
             <div class="badge-dis"><p class="discount-txt">-20%</p></div>
             <img src="img2.jpg" alt="man standing brown jacket" width="230px" height="280px">
             <p class="img-p-txt">men's brown jacket</p>
@@ -56,7 +56,7 @@
             <button class="button-add" type="button">Add to cart</button>
          </div>
          </div>
- </section>
+ </section> 
  <section>
     <div><h2>kid's Wear</h2></div>
         <div class="frist-rowpoduct"> 
@@ -85,8 +85,8 @@
             <button class="button-add" type="button">Add to cart</button>
          </div>
          <div class="kidpro3">
-            <!-- <div class="badge-newkid"><p class="txt-newkid">NEW</p></div> -->
-            <img src="kidimg3.jpg" alt="Boy's white shirt" width="230px" height="280px">
+             <div class="badge-newkid"><p class="txt-newkid">NEW</p></div> 
+             <img src="kidimg3.jpg" alt="Boy's white shirt" width="230px" height="280px">
             <p class="img-p-txt">Boy's white dress</p>
             <p class="pricepromo">Price: $10</p>
             <p class="price1"> $17</p>
@@ -130,7 +130,8 @@
             <p class="price1"> $30</p>
             <button class="button-add" type="button">Add to cart</button>
          </div>
-         </div>
+         </div> 
+         </section>
     <footer>
         <div class="footer-top">
             <h3>Shopping Website</h3>
