--- a/Week2/Day5/portfolio.html
+++ b/Week2/Day5/portfolio.html
@@ -57,6 +57,7 @@
                         success of
                         the overall product</p>
                     <hr>
+                    <div>
                     <div id="cards">
                     <div class="card">
                         <div class="card-content">
@@ -79,54 +80,25 @@
                             <i class="fa-brands fa-linkedin"></i>
                             <h2>Linkedin</h2>
                             <p>Followers: 550</p>
-                            <a href="#">Follow me</a>
+                           <a href="http://">Follow me</a>
                         </div>
                     </div>
-                </div>
-                </div>
-                <!-- <div id="cards">
-                    <div class="card">
-                        <div class="card-content">
-                            <i class="fa-brands fa-instagram"></i>
-                            <h2>Instagram</h2>
-                            <p>Followers: 550</p>
-                            <a href="#">Follow me</a>
-                        </div>
+                    <div class="imgdeco"><img src="—Pngtree—spotted monstera leaf_14627981.png" alt="" width="400"      height="400">
                     </div>
-                    <div class="card">
-                        <div class="card-content">
-                            <i class="fa-brands fa-github"></i>
-                            <h2>GitHub</h2>
-                            <p>Followers: 550</p>
-                            <a href="#">Follow me</a>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-content">
-                            <i class="fa-brands fa-linkedin"></i>
-                            <h2>Linkedin</h2>
-                            <p>Followers: 550</p>
-                            <a href="#">Follow me</a>
-                        </div>
-                    </div>
-                </div> -->
-                <div class="imgdeco"><img src="—Pngtree—spotted monstera leaf_14627981.png" alt="" width="400"
-                        height="400">
-                </div>
 
+                </div>
+                 <!-- <div class="imgdeco"><img src="—Pngtree—spotted monstera leaf_14627981.png" alt="" width="400"      height="400"> -->
+                </div>
+                </div>
+                 
             </div>
-
         </header>
-
         <section class="About">
             <div class="section1">
                 <div class="h2-section1"><h2>About me</h2></div>
                 <div class="p-section1"><p> Im currently expanding my knowledge in tech and web development, combining hands-on experience with a curiosity for learning. <br>Whether on the road or behind a screen, I’m always focused on delivering results efficiently and with integrity.</p></div>
-
-
             </div>
         </section>
-
         <section>
             <div class="text-container1">
                 <h2>My project</h2>
