--- a/Week3/Day1/Day2/favorite-food.html
+++ b/Week3/Day1/Day2/favorite-food.html
@@ -149,13 +149,13 @@ console.log(99 * "hello");
 console.log(1 != 1);
 
 1 == "1"
-// Prediction: 
+// Prediction:  true   it will convert the string to a number so 1 == 1
 // Actual: true
 console.log(1 == "1");
 
 
 1 === "1"
-// Prediction: 
+// Prediction: flase one is a string and one is a number ===  will not convert 
 // Actual:Flase
 console.log(1 === "1");
 
@@ -173,13 +173,13 @@ console.log(5 + "34");
 console.log(5 - "4");
 
 10 % 5
-// Prediction:
-// Actual:
+// Prediction: 0  10 can be divided by 5 that equal 2 and zero remainder
+// Actual: 0
 console.log(10 % 5);
 
 5 % 10
-// Prediction:
-// Actual:
+// Prediction: 5    5 is smaller thsn 10   
+// Actual: 5
 console.log(5 % 10);
 
 " " + " "
@@ -213,7 +213,7 @@ false - true
 console.log(false - true);
 
 !true
-// Prediction: 
+// Prediction: false ! = not so answer will be flase
 // Actual: flase
 console.log(!true);
 
