--- a/Week3/Day1/Day3/Exercises-mandatory.html
+++ b/Week3/Day1/Day3/Exercises-mandatory.html
@@ -62,7 +62,4 @@ else if (users.length >= 2){
     <h1>Exercises XP
 </h1>
 </body>
-</html>    If there are 2 users, console.log “<name_user1> and <name_user2> are online”.
-
-    If there are more than 2 users, console.log the first two names in the users array and the number of additional users online.
-For example, if there are 5 users, it should display:
+</html>    
