--- a/Week14/Day1/Day3/Exercises-mandatory.html
+++ b/Week14/Day1/Day3/Exercises-mandatory.html
@@ -10,9 +10,9 @@
         let y = 8
         let x = 4
         if (y > x) {
-  console.log("y is greater than x");// code runs if the condition is true
+  console.log("y is greater than x");
 } else {
-  console.log("y is not greater than x")// code runs if the condition is false
+  console.log("y is not greater than x")
 }
 
 // -----------------------ex1------------------------------
