--- a/Week14/Day1/Day5/exloop.html
+++ b/Week14/Day1/Day5/exloop.html
@@ -12,10 +12,18 @@
         console.log(i + " is odd");
     }
 }
+
+
+let stars = "";
+
+for (let i = 1; i <= 6; i++) {
+  stars += "* "; 
+  console.log(stars.trim()); 
+}
     </script>
 
 </head>
 <body>
-    
+    <h1>loop</h1>
 </body>
 </html>
